--- a/.seedignore
+++ b/.seedignore
@@ -1,46 +1,38 @@
 .git*
 .data*
-.eslintrc
-.jshintrc
-.seedignore
+
+.codacy.yml
 .dockerignore
+.eslintrc
 .gitignore
+.jshintrc
+.npmrc
+.seedignore
+app.js
 Dockerfile
-.dev.pem
+jsconfig.json
+LICENSE
+package.json
+package-lock.json
+README.md
+SeedManifest.json
+SeedModeling.mdj
+SeedSettings.json
+public/index.html
+src/index.js
+src/settings.js
+
+public/docs/*
 bin/docker/.env
 bin/docker/.port
 bin/docker/docker.env
-LICENSE
-SeedManifest.json
-SeedExport.json
-SeedModeling.mdj
 build
 node_modules
-public/docs/*
-src/seed/gql/*
-src/seed/redux.js
-src/actions/*
 src/components/*
+src/seed/*
+src/styles/css/*
 src/tests/*
 src/views/*
-src/styles/css/*
-src/seed/examples
-README.md
-package.json
-package-lock.json
-public/index.html
-?.dockerignore
-?.eslintrc
-?.jshintrc
-?Dockerfile
-?jsconfig.json
-?app.js
-?bin/docker/custom-setup.sh
-?bin/docker/docker.env
+
 ?public/*
-?src/styles/*
-?src/settings.js
-!src/seed/docs/210_assets/*
 !.keep
-!*helpers
-!*util
