Refactor Code Deploy docs

--- a/src/seed/docs/assets/aws-ec2/.env.example
+++ b/src/seed/docs/assets/aws-ec2/.env.example
@@ -19,9 +19,13 @@ INSTANCE_NAME=
 # CodeDeploy
 CDAPP_NAME=
 CDDG_NAME=
-ARN_ROLE_CD=
 
 # CodePipeline
-ARN_ROLE_PL=
 ARTIFACT_BUCKET=
 CDPL_NAME=
+
+# Route53
+ELASTIC_IP=
+ELASTIC_ID=
+HOSTED_ZONE_ID=
+DOMAIN=
