--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -6,7 +6,7 @@ name: Review
 
 on:
   push:
-    branches: [main, master, dev, pre-merge]
+    branches: [main, master, dev]
 
   pull_request:
     branches:
