--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@apollo/react-hooks": "4.0.0",
     "@babel/core": "7.22.17",
     "@material-ui/core": "4.12.4",
+    "@sentry/react": "7.68.0",
     "@testing-library/jest-dom": "6.1.3",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
