--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "devDependencies": {
     "@apollo/react-hooks": "4.0.0",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "@sentry/react": "7.112.1",
+    "@sentry/react": "7.112.2",
     "@testing-library/jest-dom": "6.4.2",
-    "@testing-library/react": "15.0.4",
+    "@testing-library/react": "15.0.5",
     "@testing-library/user-event": "14.5.2",
     "apollo-boost": "0.4.9",
     "apollo-cache-inmemory": "1.6.6",
@@ -14,10 +14,10 @@
     "classnames": "2.5.1",
     "cross-fetch": "4.0.0",
     "debug": "4.3.4",
-    "eslint": "9.1.1",
-    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "4.6.2",
     "express": "4.19.2",
-    "formik": "2.4.5",
+    "formik": "2.4.6",
     "graphql": "16.8.1",
     "jquery": "3.7.1",
     "jshint": "2.13.6",
@@ -26,14 +26,14 @@
     "npm-run-all": "4.1.5",
     "prop-types": "15.8.1",
     "query-string": "9.0.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-app-polyfill": "3.0.0",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-fetch-hook": "1.9.5",
     "react-ga4": "2.1.0",
     "react-load-script": "0.0.6",
-    "react-router": "5.3.4",
-    "react-router-dom": "5.3.4",
+    "react-router": "^5.3.4",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-use-websocket": "4.8.1",
     "sass": "1.75.0",
