--- a/SeedManifest.json
+++ b/SeedManifest.json
@@ -172,6 +172,7 @@
         },
         {
           "card": {
+            "delete": "EMPTY",
             "has": "0..*",
             "ref": "1"
           },
