--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
-    "*.js": "${basename}.lib*.js"
+    "*.js": "${capture}.lib*.js",
+    "*.view.js": "${capture}.sub*.view.js"
   },
   "workbench.editorAssociations": {
     "*.md": "vscode.markdown.preview.editor"
