--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@apollo/react-hooks": "4.0.0",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "@material-ui/core": "^4.12.4",
     "@sentry/react": "8.31.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.5.0",
