--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "npm-run-all": "4.1.5",
     "prop-types": "15.8.1",
     "query-string": "9.1.1",
-    "react": "19.0.0",
+    "react": "^18.3.1",
     "react-app-polyfill": "3.0.0",
-    "react-dom": "19.0.0",
+    "react-dom": "^18.3.1",
     "react-fetch-hook": "1.9.5",
     "react-ga4": "2.1.0",
     "react-load-script": "0.0.6",
