Update codacy settings

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -10,11 +10,17 @@ exclude_paths:
   - "**.css"
   - "**.css.map"
   - "**.scss"
-  - "public/**"
+  - "coverage/**"
   - "build/**"
+  - "public/**"
   - "src/tests/**"
   - "src/seed/docs/**"
   - "src/seed/tests/**"
   - "node_modules/**"
-  - "coverage/**"
   - ".git/**"
+  - ".github/**"
+  - ".vscode/**"
+
+  # - "bin/**"
+  # - "src/seed/examples/**"
+  # - "src/seed/gql/**"
