--- a/.github/workflows/test_wf.yml
+++ b/.github/workflows/test_wf.yml
@@ -10,13 +10,13 @@ jobs:
     timeout-minutes: 10
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@master
 
     - uses: actions/setup-node@v2
       with:
         node-version: '18.17.0'
 
-    - uses: actions/cache@v2
+    - uses: actions/cache@master
       with:
         path: ~/.npm
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
