--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "@apollo/react-hooks": "4.0.0",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@material-ui/core": "^4.12.4",
-    "@sentry/react": "9.19.0",
+    "@sentry/react": "9.20.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
+    "ajv": "8.17.1",
     "apollo-boost": "0.4.9",
     "apollo-cache-inmemory": "1.6.6",
     "body-parser": "2.2.0",
