Update node version in github actions

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -12,9 +12,9 @@ exclude_paths:
   - "**.scss"
   - "coverage/**"
   - "build/**"
+  - "docs/seed/**"
   - "public/**"
   - "src/tests/**"
-  - "src/seed/docs/**"
   - "src/seed/tests/**"
   - "node_modules/**"
   - ".git/**"
